- added dialog for deleting local notes corresponding with the files deleted in the cloud